# 19_9_DZ_chat_cmake

./: .gitignore  CMakeLists.txt  README.md
19_9_DZ_chat_cmake/: AuthData.h  CMakeLists.txt  Message.h  chat.cpp  chat.h  main.cpp  sha1.cpp  sha1.h
